@@ -76,6 +76,7 @@ class ApiQuery extends ApiBase {
 		'allimages' => 'ApiQueryAllImages',
 		'alllinks' => 'ApiQueryAllLinks',
 		'allpages' => 'ApiQueryAllPages',
+		'alltransclusions' => 'ApiQueryAllLinks',
 		'allusers' => 'ApiQueryAllUsers',
 		'backlinks' => 'ApiQueryBacklinks',
 		'blocks' => 'ApiQueryBlocks',
@@ -121,6 +122,7 @@ class ApiQuery extends ApiBase {
 		'allimages' => 'ApiQueryAllImages',
 		'alllinks' => 'ApiQueryAllLinks',
 		'allpages' => 'ApiQueryAllPages',
+		'alltransclusions' => 'ApiQueryAllLinks',
 		'backlinks' => 'ApiQueryBacklinks',
 		'categories' => 'ApiQueryCategories',
 		'categorymembers' => 'ApiQueryCategoryMembers',
